--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -1,26 +1,24 @@
 <html>
 
 <head>
-  <script src="scores.js"></script>
+  <title>Turing Complete Leaderboard</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body class="pad">
   <div class="row">
-    <div class="col-md-12 btn-group" role="group" id="button-container">
-      <button class="btn btn-success" onclick="refreshApiData()">Refresh</button>
-      <button class="btn btn-info" onclick="window.location.hash='overview'">Level Overview</button>
-      <button class="btn btn-success" onclick="window.location.hash='flood_predictor'">Water World</button>
-      <button class="btn btn-success" onclick="window.location.hash=6">Stuffe</button>
-      <button class="btn btn-success" onclick="window.location.hash=5729">FakeNeo</button>
+    <div class="btn-group w-auto" role="group" id="button-container">
+      <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='flood_predictor'">Water World</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash=6">Stuffe</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash=5729">FakeNeo</button>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12">
+    <div class="col">
       <div id="content">
         <h2>
           Initializing...
@@ -28,6 +26,10 @@
       </div>
     </div>
   </div>
+
+  <script src="scores.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CC7HW7L7K6"></script><script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CC7HW7L7K6');</script>
 </body>
 
 </html>
