--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -6,12 +6,19 @@
   <title>Turing Complete Leaderboard</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 </head>
 
 <body class="pad">
   <div class="row">
     <div class="btn-group w-auto" role="group" id="button-container">
+      <a class="btn btn-outline-primary" href="https://discord.gg/URYCpEr7Ry">
+        <i class="bi bi-discord" role="img" aria-label="Discord"></i>
+      </a>
+      <a class="btn btn-outline-primary" href="https://github.com/scottanderson/turingcomplete.live">
+        <i class="bi bi-github" role="img" aria-label="GitHub"></i>
+      </a>
       <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='flood_predictor'">Water World</button>
