--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -21,9 +21,6 @@
       </a>
       <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash='flood_predictor'">Water World</button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash=6">Stuffe</button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash=5729">FakeNeo</button>
     </div>
   </div>
   <div class="row">
@@ -38,7 +35,7 @@
 
   <script src="scores.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CC7HW7L7K6"></script><script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CC7HW7L7K6');</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CC7HW7L7K6"></script><script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CC7HW7L7K6', {send_page_view: false}); function hashChange() { var page_path = window.location.pathname + window.location.hash; gtag('event', 'page_view', {'page_path': page_path}); } window.addEventListener("hashchange", hashChange); hashChange();</script>
 </body>
 
 </html>
