--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,6 +22,7 @@
       </a>
       <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'">Top Players</button>
     </div>
   </div>
   <div class="row">
