--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="light dark">
   <title>Turing Complete Leaderboard</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-nightshade.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 </head>
 
@@ -20,6 +21,9 @@
       <a class="btn btn-outline-primary" href="https://github.com/scottanderson/turingcomplete.live">
         <i class="bi bi-github" role="img" aria-label="GitHub"></i>
       </a>
+      <button class="btn btn-outline-primary" onclick="darkmode.toggleDarkMode();  loadHashPage();">
+        <i class="bi bi-lightbulb" role="img" aria-label="Toggle dark mode"></i>
+      </button>
       <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'">Top Players</button>
@@ -37,6 +41,7 @@
 
   <script src="scores.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CC7HW7L7K6"></script><script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-CC7HW7L7K6', {send_page_view: false});</script>
 </body>
 
