--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -27,6 +27,7 @@
       <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'">Top Players</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='top_players_1k'">Top Players (&gt;1k solvers)</button>
     </div>
   </div>
   <div class="row">
