--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -40,6 +40,7 @@
     </div>
   </div>
 
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="scores.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js"></script>
