--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -24,7 +24,9 @@
       <button class="btn btn-outline-primary" onclick="darkmode.toggleDarkMode();  loadHashPage();">
         <i class="bi bi-lightbulb" role="img" aria-label="Toggle dark mode"></i>
       </button>
-      <button class="btn btn-outline-primary" onclick="refreshApiData()">Refresh</button>
+      <button class="btn btn-outline-primary" onclick="refreshApiData()">
+        <i class="bi bi-arrow-repeat" role="img" aria-label="Refresh"></i>
+      </button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'">Top Players</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players_1k'">Top Players (&gt;1k solvers)</button>
