--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -24,12 +24,12 @@
       <button class="btn btn-outline-primary" onclick="darkmode.toggleDarkMode();  loadHashPage();">
         <i class="bi bi-lightbulb" role="img" aria-label="Toggle dark mode"></i>
       </button>
-      <button class="btn btn-outline-primary" onclick="refreshApiData()">
+      <button class="btn btn-outline-primary" onclick="refreshApiData()" id="btn_refresh">
         <i class="bi bi-arrow-repeat" role="img" aria-label="Refresh"></i>
       </button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash='overview'">Level Overview</button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'">Top Players</button>
-      <button class="btn btn-outline-primary" onclick="window.location.hash='top_players_1k'">Top Players (&gt;1k solvers)</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='overview'" id="btn_overview">Level Overview</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'" id="btn_top_players">Top Players</button>
+      <button class="btn btn-outline-primary" onclick="window.location.hash='top_players_1k'" id="btn_top_players_1k">Top Players (&gt;1k solvers)</button>
     </div>
   </div>
   <div class="row">
