Median, honorable mention

--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" integrity="sha384-FlUOHq7PYM+9us0ioVhF/9R3qT2XZ2zdbwlL5uKEZ0tEK4UmmgDC0V9YJqPBWGIi" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="scores.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/js/darkmode.min.js" integrity="sha384-A4SLs39X/aUfwRclRaXvNeXNBTLZdnZdHhhteqbYFS2jZTRD79tKeFeBn7SGXNpi" crossorigin="anonymous"></script>
