Stale cache timer

--- a/turingcomplete.live/index.html
+++ b/turingcomplete.live/index.html
@@ -26,6 +26,7 @@
       </button>
       <button class="btn btn-outline-primary" onclick="refreshApiData()" id="btn_refresh">
         <i class="bi bi-arrow-repeat" role="img" aria-label="Refresh"></i>
+        <span id="lbl_refresh"></span>
       </button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='overview'" id="btn_overview">Level Overview</button>
       <button class="btn btn-outline-primary" onclick="window.location.hash='top_players'" id="btn_top_players">Top Players</button>
